--- a/index.html
+++ b/index.html
@@ -1,15 +1,48 @@
 <!doctype html>
+<html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Connect 4</title>
   <link href="connect4.css" rel="stylesheet">
 </head>
+
 <body>
 
-<div id="game">
-  <table id="board"></table>
-</div>
+  <div id="start-screen">
+    <button id="start-button">Start Game</button>
+  </div>
 
-<script src="connect4.js"></script>
+  <div id="color-selection-screen" style="display:none;">
+    <div class="player-selection">
+      <div>Player 1</div>
+      <select id="player1-color">
+        <option value="" selected disabled>Select Color</option>
+      </select>
+    </div>
+    <div class="player-selection">
+      <div>Player 2</div>
+      <select id="player2-color">
+        <option value="" selected disabled>Select Color</option>
+      </select>
+    </div>
+    <button id="continue-button">Continue</button>
+    <div id="error-message" style="color: red;"></div>
+  </div>
+
+  <div id="game" style="display:none;">
+    <table id="board"></table>
+  </div>
+
+  <div id="game-over-screen" style="display:none;">
+    <div id="game-over-message"></div>
+    <button id="return-home-button">Return Home</button>
+    <button id="start-over-button">Start Over</button>
+  </div>
+
+  <script src="connect4.js"></script>
 
 </body>
+
 </html>
